@@ -37,6 +37,10 @@ API Changes
  5. LUCENE-834: Changed some access levels for certain Span classes to allow them to be overridden.  They have
     been marked expert only and not for public consumption. (Grant Ingersoll) 
 
+ 6. LUCENE-796: Removed calls to super.* from various get*Query methods in
+    MultiFieldQueryParser, in order to allow sub-classes to override them.
+    (Steven Parkes via Otis Gospodnetic)
+
 Bug fixes
 
  1. LUCENE-804: Fixed build.xml to pack a fully compilable src dist.  (Doron Cohen)
